# MAI-OOP-LAB3

./: README.md
lab3/: CMakeLists.txt  main.cpp
lab3/include/: array.hpp  figure.hpp  point.hpp  rectangle.hpp  square.hpp  triangle.hpp
lab3/src/: array.cpp  figure.cpp  point.cpp  rectangle.cpp  square.cpp  triangle.cpp
lab3/test/: test.cpp
